--- a/core/res/res/values/custom_config.xml
+++ b/core/res/res/values/custom_config.xml
@@ -44,4 +44,10 @@
      <!-- The list of components which should be forced to be enabled. -->
      <string-array name="config_forceEnabledComponents" translatable="false">
      </string-array>
+
+    <!-- Define device configs on boot -->
+    <string-array name="global_device_configs_override" translatable="false">
+    </string-array>
+    <string-array name="device_configs_override" translatable="false">
+    </string-array>
 </resources>
