--- a/core/res/res/values/custom_symbols.xml
+++ b/core/res/res/values/custom_symbols.xml
@@ -41,4 +41,8 @@
   <!-- Location indicator -->
   <java-symbol type="drawable" name="stat_sys_location" />
 
+  <!-- Define device configs on boot -->
+  <java-symbol type="array" name="global_device_configs_override" />
+  <java-symbol type="array" name="device_configs_override" />
+
 </resources>
