--- a/core/res/res/values/custom_symbols.xml
+++ b/core/res/res/values/custom_symbols.xml
@@ -31,6 +31,7 @@
   <!-- PropImitationHooks -->
   <java-symbol type="array" name="config_certifiedBuildProperties" />
   <java-symbol type="string" name="config_stockFingerprint" />
+  <java-symbol type="bool" name="config_spoofasTablet" />
   
   <!-- Package Manager -->
   <java-symbol type="array" name="config_deviceDisabledComponents" />
